Start HTML & CSS for recipient data review table and stats component + add icon assets

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,2 @@
-<p>home-page works!</p>
+<app-recipient-data-review-stats></app-recipient-data-review-stats>
+<app-recipient-data-review-table></app-recipient-data-review-table>
