--- a/src/app/recipient-data-review-stats/recipient-data-review-stats.component.html
+++ b/src/app/recipient-data-review-stats/recipient-data-review-stats.component.html
@@ -1,1 +1,26 @@
-<p>recipient-data-review-stats works!</p>
+<div class="stats-blocks">
+    <div class="block">
+        <h3 class="block-number">38</h3>
+        <p class="block-text">Accounts uploaded this month</p>
+    </div>
+
+    <div class="block">
+        <h3 class="block-number">1,500</h3>
+        <p class="block-text">Forms uploaded this month</p>
+    </div>
+
+    <div class="block">
+        <h3 class="block-number">2</h3>
+        <p class="block-text">Pending forms</p>
+    </div>
+
+    <div class="block">
+        <h3 class="block-number">3</h3>
+        <p class="block-text">Total forms approved</p>
+    </div>
+
+    <div class="block">
+        <h3 class="block-number">10</h3>
+        <p class="block-text">Total rejected forms</p>
+    </div>
+</div>
