start html and css for recipient data review table

--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.html
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.html
@@ -1,4 +1,4 @@
-<div class="recipient-data-review-table">
+<div class="recipient-data-review-table-container">
     <div class="table-header">
         <div>
             <h2 class="main-title">Recipient Data Review</h2>
@@ -10,4 +10,45 @@
             <button class="btn secondary upload-accounts"><img src="../../assets/upload-icon-dark.svg" class="upload-icon"/> Upload Accounts</button>
         </div>
     </div>
+
+    <table class="recipient-data-review-table">
+      <tr class="header">
+        <th>Company <img src="../../assets/sort.svg"/></th>
+        <th>Form Type <img src="../../assets/sort.svg"/></th>
+        <th>Tax Year <img src="../../assets/sort.svg"/></th>
+        <th>File Type <img src="../../assets/sort.svg"/></th>
+        <th>Status <img src="../../assets/sort.svg"/></th>
+      </tr>
+      <tr>
+        <td>ABC Company</td>
+        <td>1099-NEC</td>
+        <td>2022</td>
+        <td>Production</td>
+        <td><div class="status-circle"></div>Approved</td>
+      </tr>
+
+      <tr>
+          <td>ABC Company</td>
+          <td>1099-NEC</td>
+          <td>2022</td>
+          <td>Production</td>
+          <td><div class="status-circle"></div>Approved</td>
+      </tr>
+
+      <tr>
+        <td>ABC Company</td>
+        <td>1099-NEC</td>
+        <td>2022</td>
+        <td>Production</td>
+        <td><div class="status-circle"></div>Approved</td>
+    </tr>
+
+    <tr>
+      <td>ABC Company</td>
+      <td>1099-NEC</td>
+      <td>2022</td>
+      <td>Production</td>
+      <td><div class="status-circle"></div>Approved</td>
+  </tr>
+  </table> 
 </div>
