--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.css
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.css
@@ -1,4 +1,9 @@
-.recipient-data-review-table {
+* {
+    --color-approved: #6B7280;
+    --color-needs-review: #D97706;
+}
+
+.recipient-data-review-table-container {
     background-color: #fff;
     border-radius: var(--bd-radius);
     margin-top: 10px;
@@ -9,6 +14,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px 0;
+    margin-bottom: 35px;
 }
 
 .main-title {
@@ -26,6 +34,11 @@
 .header-buttons {
     display: flex;
     gap: 1.25rem;
+    flex-wrap: wrap;
+}
+
+.header-buttons button {
+    flex-grow: 1;
 }
 
 .btn.primary.upload-forms {
@@ -34,4 +47,49 @@
 
 .btn.secondary.upload-accounts {
     padding: 13px 29px;
+}
+
+/* Table styles */
+
+.recipient-data-review-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.recipient-data-review-table th, .recipient-data-review-table td {
+    text-align: left;
+}
+
+.recipient-data-review-table th {
+    color: var(--title-color);
+    font-size: 1rem;
+}
+
+.recipient-data-review-table .sort-icons {
+    display: inline-block;
+}
+
+.recipient-data-review-table td {
+    border-bottom: 1px solid #E5E7EB;
+    font-size: 1rem;
+    padding: 20px 0 20px 0;
+    color: var(--text-color);
+}
+
+.recipient-data-review-table tr:last-child td {
+    border-bottom: none
+}
+
+.recipient-data-review-table th > img {
+    /* vertical-align: middle; */
+    vertical-align: sub;
+}
+
+.status-circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: var(--color-approved);
+    display: inline-block;
+    margin-right: 10px;
 }
