Add review page button at the end of records for recipient datar review table + new assets

--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.html
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.html
@@ -13,11 +13,11 @@
 
     <table class="recipient-data-review-table">
       <tr class="header">
-        <th>Company <img src="../../assets/sort.svg"/></th>
-        <th>Form Type <img src="../../assets/sort.svg"/></th>
-        <th>Tax Year <img src="../../assets/sort.svg"/></th>
-        <th>File Type <img src="../../assets/sort.svg"/></th>
-        <th>Status <img src="../../assets/sort.svg"/></th>
+        <th>Company <img src="../../assets/sort-icon-grey.svg"/></th>
+        <th>Form Type <img src="../../assets/sort-icon-grey.svg"/></th>
+        <th>Tax Year <img src="../../assets/sort-icon-grey.svg"/></th>
+        <th>File Type <img src="../../assets/sort-icon-grey.svg"/></th>
+        <th>Status <img src="../../assets/sort-icon-grey.svg"/></th>
       </tr>
       <tr>
         <td>ABC Company</td>
@@ -25,14 +25,7 @@
         <td>2022</td>
         <td>Production</td>
         <td><div class="status-circle"></div>Approved</td>
-      </tr>
-
-      <tr>
-          <td>ABC Company</td>
-          <td>1099-NEC</td>
-          <td>2022</td>
-          <td>Production</td>
-          <td><div class="status-circle"></div>Approved</td>
+        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
       </tr>
 
       <tr>
@@ -41,14 +34,61 @@
         <td>2022</td>
         <td>Production</td>
         <td><div class="status-circle"></div>Approved</td>
-    </tr>
+        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
+      </tr>
 
-    <tr>
-      <td>ABC Company</td>
-      <td>1099-NEC</td>
-      <td>2022</td>
-      <td>Production</td>
-      <td><div class="status-circle"></div>Approved</td>
-  </tr>
+      <tr>
+        <td>ABC Company</td>
+        <td>1099-NEC</td>
+        <td>2022</td>
+        <td>Production</td>
+        <td><div class="status-circle"></div>Approved</td>
+        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
+      </tr>
+
+      <tr>
+        <td>ABC Company</td>
+        <td>1099-NEC</td>
+        <td>2022</td>
+        <td>Production</td>
+        <td><div class="status-circle"></div>Approved</td>
+        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
+      </tr>
+
+      <tr>
+        <td>ABC Company</td>
+        <td>1099-NEC</td>
+        <td>2022</td>
+        <td>Production</td>
+        <td><div class="status-circle"></div>Approved</td>
+        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
+      </tr>
+
+      <tr>
+        <td>ABC Company</td>
+        <td>1099-NEC</td>
+        <td>2022</td>
+        <td>Production</td>
+        <td><div class="status-circle"></div>Approved</td>
+        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
+      </tr>
+
+      <tr>
+        <td>ABC Company</td>
+        <td>1099-NEC</td>
+        <td>2022</td>
+        <td>Production</td>
+        <td><div class="status-circle"></div>Approved</td>
+        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
+      </tr>
+
+      <tr>
+        <td>ABC Company</td>
+        <td>1099-NEC</td>
+        <td>2022</td>
+        <td>Production</td>
+        <td><div class="status-circle"></div>Approved</td>
+        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
+      </tr>
   </table> 
 </div>
