--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.css
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.css
@@ -8,6 +8,10 @@
     border-radius: var(--bd-radius);
     margin-top: 10px;
     padding: 20px;
+    height: 500px;
+    overflow: scroll;
+    scrollbar-width: 100px;
+    scrollbar-color: #D9D9D9;
 }
 
 .table-header {
@@ -33,7 +37,7 @@
 
 .header-buttons {
     display: flex;
-    gap: 1.25rem;
+    gap: 10px;
     flex-wrap: wrap;
 }
 
@@ -72,16 +76,32 @@
 .recipient-data-review-table td {
     border-bottom: 1px solid #E5E7EB;
     font-size: 1rem;
-    padding: 20px 0 20px 0;
+    padding: 15px 0 15px 0;
     color: var(--text-color);
+    width: 22%;
 }
 
 .recipient-data-review-table tr:last-child td {
-    border-bottom: none
+    padding: 15px 0 0 0;
+}
+
+.recipient-data-review-table tr td:last-child {
+    width: 5%;
+}
+
+.recipient-data-review-table .review-page-circle {
+    background-color: var(--btn-primary-color);
+    display: flex;
+    border-radius: 100%;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.recipient-data-review-table tr:last-child td {
+    border-bottom: none;
 }
 
 .recipient-data-review-table th > img {
-    /* vertical-align: middle; */
     vertical-align: sub;
 }
 
