--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.html
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.html
@@ -20,14 +20,17 @@
         <th>Status <img src="../../assets/sort-icon-grey.svg"/></th>
       </tr>
 
-
-      <tr *ngFor="let record of recipientDataReviewRecords">
-        <td>{{record.companyName}}</td>
-        <td>{{record.formType}}</td>
-        <td>{{record.taxYear}}</td>
-        <td>{{record.fileType}}</td>
-        <td><div class="status-circle"></div>Approved</td>
-        <td><div class="review-page-circle"><img src="../../assets/data-review-icon-light.svg"/></div></td>
-      </tr>
+      @for (record of recipientDataReviewRecords; track $index) {
+        <tr>
+          <td>{{record.companyName}}</td>
+          <td>{{record.formType}}</td>
+          <td>{{record.taxYear}}</td>
+          <td>{{record.fileType}}</td>
+          <td><div class="status-circle"></div>Approved</td>
+          <td><div class="review-page-circle" (click)="open($event, record.formType)"><img src="../../assets/data-review-icon-light.svg"/></div></td>
+        </tr>
+      }
   </table> 
 </div>
+
+<p-confirmDialog styleClass="test"></p-confirmDialog>
