Global styles update + styles update for ConfirmDialog primeng componenent

--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.html
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.html
@@ -33,4 +33,4 @@
   </table> 
 </div>
 
-<p-confirmDialog styleClass="test"></p-confirmDialog>
+<p-confirmDialog styleClass="confirm-modal"></p-confirmDialog>
