--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.css
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.css
@@ -1,5 +1,5 @@
 * {
-    --color-approved: #6B7280;
+    --approved: #6B7280;
     --color-needs-review: #D97706;
 }
 
@@ -111,11 +111,35 @@
     width: 10px;
     height: 10px;
     border-radius: 100%;
-    background-color: var(--color-approved);
+    background-color: var(--approved);
     display: inline-block;
     margin-right: 10px;
 }
 
 .test .p-confirm-dialog {
     padding: 20px;
+}
+
+
+::ng-deep .confirm-modal .p-dialog-header {
+    padding: 20px 20px 0 20px;
+    font-weight: bold;
+    font-size: 1.125rem;
+}
+
+::ng-deep .confirm-modal .p-dialog-content {
+    padding: 20px;
+    max-width: 450px;
+}
+
+::ng-deep .confirm-modal .p-confirm-dialog-message {
+    font-size: 1rem;
+}
+
+::ng-deep .confirm-modal .p-dialog-footer {
+    padding: 0 20px 20px 20px;
+}
+
+::ng-deep .confirm-modal .p-button:focus-visible {
+    outline: 0;
 }
