--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.css
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.css
@@ -134,6 +134,7 @@
 
 ::ng-deep .confirm-modal .p-confirm-dialog-message {
     font-size: 1rem;
+    color: var(--text-color);
 }
 
 ::ng-deep .confirm-modal .p-dialog-footer {
@@ -142,4 +143,9 @@
 
 ::ng-deep .confirm-modal .p-button:focus-visible {
     outline: 0;
+}
+
+::ng-deep .confirm-modal .p-dialog-footer .p-button {
+    background-color: var(--btn-primary-color);
+    border: none;
 }
