--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.css
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.css
@@ -141,6 +141,10 @@
     padding: 0 20px 20px 20px;
 }
 
+::ng-deep .confirm-modal .p-button:focus {
+    box-shadow: 0 0 0 2px #ffffff,0 0 0 4px var(--btn-primary-color), 0 1px 2px 0 black;
+}
+
 ::ng-deep .confirm-modal .p-button:focus-visible {
     outline: 0;
 }
