Add all image assests for left navigation bar + finisehd left navigation bar components + HTML & CSS updates

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,6 @@
-<h4 class="welcome-message">Welcome, <span>Alexander</span></h4>
-<h1 class="company-name">Musical Airways International</h1>
-
-<app-recipient-data-review-stats></app-recipient-data-review-stats>
-<app-recipient-data-review-table></app-recipient-data-review-table>
+<div class="page-container">
+    <div class="main-content-container">
+        <app-recipient-data-review-stats></app-recipient-data-review-stats>
+        <app-recipient-data-review-table></app-recipient-data-review-table>
+    </div>
+</div>
