--- a/src/app/recipient-data-review-stats/recipient-data-review-stats.component.css
+++ b/src/app/recipient-data-review-stats/recipient-data-review-stats.component.css
@@ -6,7 +6,7 @@
     padding: 1.625rem;
     border-radius: var(--bd-radius);
     flex-wrap: wrap;
-    margin-top: 20px;
+    border: 1px solid var(--border-color);
 }
 
 .block {
