--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,7 @@
 .container {
-    max-width: 1400px;
+    max-width: 1980px;
     width: 100%;
-    margin: 20px auto;
+    display: flex;
+    padding: 10px;
+    position: relative;
 }
