--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,3 +1,11 @@
+:host {
+    width: 100%;
+}
+
+.page-container {
+    padding: 0 10px ;
+}
+
 .company-name {
     color: var(--title-color);
     font-size: 2.25rem;
@@ -12,4 +20,3 @@
 .welcome-message span {
     font-weight: bold;
 }
-
