--- a/src/app/left-navigation-bar/left-navigation-bar.component.css
+++ b/src/app/left-navigation-bar/left-navigation-bar.component.css
@@ -2,7 +2,7 @@
     background-color: #fff;
     border-right: 1px solid var(--border-color);
     width: 280px;
-    height: calc(100vh - 20px);
+    /* height: 100vh; */
     padding: 15px;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@
 }
 
 .left-navigation-bar .footer {
-    margin-top: auto;
+    margin-top: 30px;
 }
 
 .left-navigation-bar ul li a {
@@ -72,6 +72,7 @@
     gap: 15px;
     align-items: center;
     text-decoration: none;
+    margin-top: 15px;
 }
 
 .circle {
