--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.css
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.css
@@ -9,7 +9,7 @@
     margin-top: 10px;
     padding: 20px;
     height: 500px;
-    overflow: scroll;
+    overflow-y: scroll;
     scrollbar-width: 100px;
     scrollbar-color: #D9D9D9;
     border: 1px solid var(--border-color);
@@ -82,6 +82,7 @@
     padding: 15px 0 15px 0;
     color: var(--text-color);
     width: 22%;
+    vertical-align: middle;
 }
 
 .recipient-data-review-table tr:last-child td {
