--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,5 +2,7 @@
     <div class="main-content-container">
         <app-recipient-data-review-stats></app-recipient-data-review-stats>
         <app-recipient-data-review-table></app-recipient-data-review-table>
+        <app-recipient-data-review-table></app-recipient-data-review-table>
+        <app-recipient-data-review-table></app-recipient-data-review-table>
     </div>
 </div>
