--- a/src/app/left-navigation-bar/left-navigation-bar.component.css
+++ b/src/app/left-navigation-bar/left-navigation-bar.component.css
@@ -1,8 +1,20 @@
 .left-navigation-bar {
     background-color: #fff;
     width: 280px;
-    height: calc(100vh - 20px);
-    min-height: 100%;
+    min-height: calc(100% - 20px);
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    position: fixed;
+}
+
+.hidden {
+    visibility: hidden;
+    background-color: #fff;
+    width: 280px;
+    min-height: calc(100% - 20px);
     padding: 15px;
     display: flex;
     flex-direction: column;
