--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.css
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.css
@@ -139,11 +139,11 @@
     padding: 20px;
 }
 
-
 ::ng-deep .confirm-modal .p-dialog-header {
     padding: 20px 20px 0 20px;
     font-weight: bold;
     font-size: 1.125rem;
+    color: var(--title-color);
 }
 
 ::ng-deep .confirm-modal .p-dialog-content {
