--- a/src/app/upload-forms-modal/upload-forms-modal.component.html
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.html
@@ -1,6 +1,14 @@
-<p-dialog header="Header" (onHide)="hide()" [(visible)]="isVisible" [style]="{width: '50vw'} ">
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+<p-dialog header="Upload Forms" (onHide)="hide()" [modal]="true" resizable="false" [(visible)]="isVisible" styleClass="upload-forms-modal">
+    <div class="form-group">
+        <label for="formType">Form Type</label>
+        <p-dropdown [options]="formTypes" optionLabel="formType" placeholder="Select a form type"></p-dropdown>
+    </div>
+
+    <div class="form-group">
+        <label for="fileTypes">File Type</label>
+        <div class="buttons">
+            <button class="btn secondary">Production</button>
+            <button class="btn secondary">Test</button>
+        </div>
+    </div>
 </p-dialog>
