Remove EventEmitter from upload-forms-modal.ts and move component to the home-page component

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,8 @@
 <div class="page-container">
     <div class="main-content-container">
         <app-recipient-data-review-stats></app-recipient-data-review-stats>
-        <app-recipient-data-review-table></app-recipient-data-review-table>
+        <app-recipient-data-review-table (showUploadFormsModalEvent)="this.isUploadFormsModalVisible = $event" ></app-recipient-data-review-table>
     </div>
 </div>
+
+<app-upload-forms-modal [isVisible]="isUploadFormsModalVisible"></app-upload-forms-modal>
