--- a/src/app/upload-forms-modal/upload-forms-modal.component.css
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.css
@@ -1,11 +1,30 @@
 ::ng-deep .upload-forms-modal {
-    /* max-width: 450px; */
-    /* width: 100%; */
+    max-width: 465px;
+    width: 100%;
     /* height: 100%; */
 }
 
+::ng-deep .upload-forms-modal .input-label {
+    color: var(--title-color);
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+::ng-deep .upload-forms-modal .p-dialog-content {
+    padding: 20px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+::ng-deep .upload-forms-modal .p-dropdown {
+    border: 1px solid #E5E7EB;
+    width: 100%;
+    padding: 15px;
+}
+
 ::ng-deep .upload-forms-modal .p-dialog-header {
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     font-weight: bold;
     color: var(--title-color);
     padding: 20px 20px 0 20px;
@@ -14,7 +33,6 @@
 ::ng-deep .upload-forms-modal .form-group {
     display: flex;
     flex-direction: column;
-    padding: 20px 20px 20px 20px;
     gap: 10px 10px;
 }
 
@@ -24,6 +42,5 @@
 }
 
 ::ng-deep .upload-forms-modal .buttons button {
-    border: 0;
-    padding: 10px 25px;
+    padding: 13px 40px;
 }
