--- a/src/app/upload-forms-modal/upload-forms-modal.component.html
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.html
@@ -25,7 +25,7 @@
     <div class="form-group">
         <label for="fileUpload" class="input-label">File Upload</label>
         <div class="choose-and-label-container">
-            <p-fileUpload class="choose-file-button" mode="basic" chooseIcon="pi pi-upload" chooseLabel="Choose a file" name="demo[]" url="https://www.primefaces.org/cdn/api/upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onUpload($event)"></p-fileUpload>
+            <p-fileUpload class="choose-file-button" mode="basic" chooseIcon="pi pi-upload" cancelLabel="Choose a file" chooseLabel="Choose a file" uploadLabel="Choose a file" name="demo[]" url="https://www.primefaces.org/cdn/api/upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onUpload($event)"></p-fileUpload>
             <p>good-file1.csv</p>
         </div>
     </div>
