hide upload-forms-modal when clicking cancel button

--- a/src/app/upload-forms-modal/upload-forms-modal.component.html
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="action-buttons-container">
-        <button class="btn clear">Cancel</button>
+        <button class="btn clear" (click)="hide()">Cancel</button>
         <button class="btn primary">Upload Form</button>
     </div>
 </p-dialog>
