Update upload-forms-modal.ts to use reactive forms instead of template driven forms and finish capturing all form values

--- a/src/app/upload-forms-modal/upload-forms-modal.component.css
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.css
@@ -14,7 +14,7 @@
     font-size: 1rem;
 }
 
-::ng-deep .upload-forms-modal .p-dialog-content {
+::ng-deep .upload-forms-modal .p-dialog-content form {
     padding: 20px 20px 20px 20px;
     display: flex;
     flex-direction: column;
@@ -54,6 +54,11 @@
     display: flex;
     width: fit-content;
     gap: 10px;
+}
+
+::ng-deep .upload-forms-modal .btn.secondary.active {
+    background-color: var(--primary);
+    color: white;
 }
 
 
