Converted uploadFormsForm FormGroup to be strictly typed + added fixed width to <p> tag for file name

--- a/src/app/upload-forms-modal/upload-forms-modal.component.css
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.css
@@ -44,6 +44,7 @@
 
 ::ng-deep .upload-forms-modal .choose-and-label-container p {
     font-size: 12px;
+    width: 150px;
 }
 
 ::ng-deep .upload-forms-modal .p-button.p-fileupload-choose {
@@ -67,7 +68,6 @@
     /* width: 16px;
     height: 16px; */
 }
-
 
 ::ng-deep .upload-forms-modal .p-dialog-header {
     font-size: 1.5rem;
